charts/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-app-ingress
#  namespace: default
#  annotations:
#    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: vault-app.mkve.ru
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name:  vault-app-service
                port:
                  number: 80
